--- a/src/routes/DashboardRoute/DashboardRoute.css
+++ b/src/routes/DashboardRoute/DashboardRoute.css
@@ -2,11 +2,12 @@
   width: 80%;
   background: lightgrey;
   margin: 75px auto 25px auto;
-  padding: 25px;
+  padding: 20px;
 }
 
 .language-header, .words-header{
   text-align: center;
+  margin: 15px;
 }
 
 .score{
@@ -37,7 +38,6 @@ ul{
 li{
   margin: 1.5%;
   background: rgb(228, 228, 228);
-  flex: 30%;
   height: 100px;
   line-height: 12.5px;
 }
@@ -93,3 +93,40 @@ li{
 .red{
   color: red;
 }
+
+@media screen and (max-width: 500px){
+  li{
+    flex: 100%;
+  }
+
+  .bar{
+    height: 100px;
+    text-align: center;
+  }
+  .start{
+    float: none;
+    margin: auto;
+  }
+
+  .score{
+    margin: 10px auto;
+  }
+}
+
+@media screen and (min-width: 500px){
+  li{
+    flex: 45%;
+  }
+}
+
+@media screen and (min-width: 750px){
+  li{
+    margin: 1.5%;
+    background: rgb(228, 228, 228);
+    flex: 30%;
+    height: 100px;
+    line-height: 12.5px;
+  }
+}
+
+
