--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@ header{
   background: black;
   height: 50px;
   width: 100%;
-  position: fixed;
+  position: sticky;
   top: 0;
   margin: 0px;
   padding: 0px;
