start styling registration, add notes for components

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+/* @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 * {
   box-sizing: border-box;
@@ -20,7 +20,7 @@ body {
   font-size: 30px;
   text-align: center;
   margin: 15px auto;
-} 
+}
 
 .log-in{
   margin: 75px auto 15px auto;
@@ -32,4 +32,4 @@ body {
   text-align: center;
   margin: 75px auto 25px auto;
   background: rgb(241, 241, 241);
-}
+} */
