--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -59,6 +59,14 @@ body {
   font-size: 18px;
 }
 
+.green{
+  color: green;
+}
+
+.red{
+  color: red;
+}
+
 // Header
 
 header {
@@ -295,5 +303,98 @@ main {
 
 
   // Learning Route
+
+  .LearningRoute{
+    width: 90%;
+    border: 1px black solid;
+    text-align: center;
+    margin: auto;
+    position: relative;
+
+    .count{
+      width: 80%;
+      margin: 15px auto;
+    }
+
+    .bold{
+      font-weight: bold;
+    }
+    
+    h2, h3{
+      line-height: 30px;
+      margin: 10px auto;
+    }
+
+    h2{
+      margin-top: 50px;
+    }
+
+    .banner{
+      width: 100%;
+      background: lightgrey;
+      height: 35px;
+      position: absolute;
+      padding-top: 5px;
+      margin: 0px;
+      border-bottom: 1px solid black;
+      top: 0;
+    }
+
+    .container{
+      width: 80%;
+      margin: auto;
+    }
+
+    #learn-guess-form{
+      background: $green;
+      padding: 20px 10px;
+      margin: 25px auto;
+
+      button{
+        top:0;
+        display: inline-block;
+        border: none;
+        padding: 7px;
+        text-decoration: none;
+        background: white;  
+        font-size: 18px;
+        cursor: pointer;
+        text-align: center;
+        transition: background 250ms ease-in-out, 
+                    transform 150ms ease;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+      }
+      button:hover,
+      button:focus {
+        background: rgb(216, 216, 216);
+      }
+
+      button:focus {
+        outline: 1px solid #fff;
+        outline-offset: -4px;
+      }
+      
+      button:active {
+        transform: scale(0.99);
+      }
+
+      input{
+        width: 90%;
+        margin: 15px auto;
+      }
+    }
+  }
+
+  @media screen and (min-width: 1000px){
+    .LearningRoute{
+      width: 75%;
+    }
+
+    #learn-guess-form{
+      width: 75%;
+      margin: auto;
+    }
+  }
 
 }
