--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -78,7 +78,7 @@ body {
   position: -o-sticky;
   top: 0;
   justify-content: space-between;
-  padding: 10px 10px;
+  padding: 10px 15px;
   border-bottom: 1px solid;
   font-family: $sans;
   text-transform: uppercase;
@@ -105,11 +105,11 @@ body {
     text-decoration: none;
   }
 
-  .login-controls {
+  .login-controls, .logged-in-controls {
     flex: 40%;
     text-align: right;
 
-    .login, .register{
+    .login, .register, .header-user-name, .logout{
       display: block;
 
       @media (min-width: 414px) {
@@ -128,9 +128,6 @@ body {
       padding-left: 15px;
     }
 
-  }
-  .logged-in-controls {
-    display: flex;
   }
 }
 
@@ -222,80 +219,53 @@ body {
   .dashboard{
     margin: auto;
     width: 95%;
-    font-family: $serif;
+
+    @media screen and (min-width: 768px) {
+        width: 75%;
+      }
 
     h2{
       text-align: center;
       margin: 15px auto;
+      text-transform: uppercase;
       font-size: 30px;
-      font-family: $sans;
     }
 
     .bar{
-      height: 40px;
+      height: 100px;
+      text-align: center;
       width: 100%;
-      font-family: $sans;
+      margin: 0;
+      padding: 0;
 
       .score{
-        display: inline-block;
+        text-align: center;
         font-size: 20px;
-        margin: 7px 0px;
+        padding:  10px 15px;
+        text-transform: uppercase;
+
+        @media screen and (min-width: 768px) {
+          float: left;
+          margin: 20px auto;
+        }
       }
 
-      .start{
-        top:0;
-        display: inline-block;
-        border: none;
-        padding: 7px;
-        text-decoration: none;
-        background: rgb(216, 216, 216);
-        font-size: 18px;
-        cursor: pointer;
+      button {
         text-align: center;
-        transition: background 250ms ease-in-out,
-                    transform 150ms ease;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-      }
-      .start:hover,
-      .start:focus {
-        background: $green;
-      }
+        background-color: $green;
+        padding:  10px 15px;
+        border: 1px solid;
+        text-transform: uppercase;
+        margin: 10px auto;
 
-      .start:focus {
-        outline: 1px solid #fff;
-        outline-offset: -4px;
-      }
-
-      .start:active {
-        transform: scale(0.99);
-      }
-    }
-
-    @media screen and (max-width: 490px) {
-
-      .bar{
-        height: 100px;
-        text-align: center;
-      }
-
-      .score{
-        display: inline-block;
-        margin: auto;
-      }
-
-      .start{
-        float: none;
-        display: inline-block;
-        margin: 15px auto;
-        font-size: 10px;
-      }
-    }
-
-    @media screen and (min-width: 490px) {
-
-      .start{
-        float: right;
+        @media screen and (min-width: 768px) {
+          margin: 20px auto;
+          float: right;
+        }
+  
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
 
@@ -304,6 +274,7 @@ body {
       margin: 15px auto;
       text-align: center;
       font-family: $sans;
+      text-transform: uppercase;
     }
 
     ul{
@@ -316,16 +287,21 @@ body {
 
       li{
         list-style: none;
-        flex: 30%;
-        margin: 2%;
+        flex: 100%;
+        margin: 2% 5%;
         line-height: 1.75rem;
+
+        @media screen and (min-width: 768px) {
+          flex: 30%;
+        }
 
         .word-list-item{
           background: $green;
-          padding: 5px;
+          padding: 15px 5px;
 
           h4{
             font-weight: bold;
+            text-transform: uppercase;
           }
         }
 
@@ -339,23 +315,6 @@ body {
           font-size: 16px;
         }
       }
-      @media screen and (max-width: 490px) {
-        li{
-          flex: 100%;
-        }
-      }
-    }
-  }
-
-  @media screen and (max-width: 490px) {
-    .dashboard{
-      width: 95%;
-    }
-  }
-
-  @media screen and (min-width: 1000px) {
-    .dashboard{
-      width: 75%;
     }
   }
 
