--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -169,6 +169,12 @@ body {
   .log-in {
     padding: 1em 0;
   }
+  .registerHelper {
+    display: block;
+    font-size: 0.75em;
+    font-style: italic;
+    padding-bottom: 0.5em;
+  }
   .sign-up,
   .log-in {
     font-weight: 600;
